--- a/src/users/containers/ogd-profile-content/ogd-profile-content.component.html
+++ b/src/users/containers/ogd-profile-content/ogd-profile-content.component.html
@@ -1,1 +1,3 @@
-<p>ogd-profile-content works!</p>
+<p class="govuk-body">
+    The following roles are available to manage cases for your organisation
+</p>
