Added instruction comments for when to display each component

--- a/src/users/containers/manage-user/manage-user.component.html
+++ b/src/users/containers/manage-user/manage-user.component.html
@@ -4,3 +4,8 @@
   [title]="'Manage user'"
 >
 </app-hmcts-main-wrapper>
+
+<!-- Display if OrganisationProfileId = 'SOLICITOR_PROFILE' -->
+<app-solicitor-profile-content></app-solicitor-profile-content>
+<!-- Display if OrganisationProfileId LIKE 'OGD_*' -->
+<app-ogd-profile-content></app-ogd-profile-content>
