--- a/src/users/containers/manage-user/manage-user.component.html
+++ b/src/users/containers/manage-user/manage-user.component.html
@@ -9,4 +9,6 @@
 <app-solicitor-profile-content></app-solicitor-profile-content>
 <!-- Display if OrganisationProfileId LIKE 'OGD_*' -->
 <app-ogd-profile-content></app-ogd-profile-content>
-<app-organisation-access-permissions></app-organisation-access-permissions>
+<app-organisation-access-permissions
+  (selectedPermissionsChanged)="updateSelectedOrganisationPermissions($event)"
+></app-organisation-access-permissions>
