--- a/src/users/containers/manage-user/manage-user.component.html
+++ b/src/users/containers/manage-user/manage-user.component.html
@@ -5,10 +5,10 @@
 >
 </app-hmcts-main-wrapper>
 
-<!-- Display if OrganisationProfileId = 'SOLICITOR_PROFILE' -->
-<app-solicitor-profile-content></app-solicitor-profile-content>
-<!-- Display if OrganisationProfileId LIKE 'OGD_*' -->
-<app-ogd-profile-content></app-ogd-profile-content>
+<app-static-user-permissions
+  [user]="this.user"
+  (selectedPermissionsChanged)="onSelectedUserPermissionsChange($event)"
+></app-static-user-permissions>
 <app-organisation-access-permissions
-  (selectedPermissionsChanged)="updateSelectedOrganisationPermissions($event)"
+  (selectedPermissionsChanged)="onSelectedOrganisationPermissions($event)"
 ></app-organisation-access-permissions>
