--- a/src/users/components/organisation-access-permissions/organisation-access-permissions.component.html
+++ b/src/users/components/organisation-access-permissions/organisation-access-permissions.component.html
@@ -1,16 +1,31 @@
 <h2 class="govuk-heading-l">Case management and access</h2>
-<!-- Display if OrganisationProfileId = 'SOLICITOR_PROFILE' -->
-<app-solicitor-profile-content
-  *ngIf="hasSolicitorProfile"
-></app-solicitor-profile-content>
-<!-- Display if OrganisationProfileId LIKE 'OGD_*' -->
-<app-ogd-profile-content *ngIf="hasOgdProfile"></app-ogd-profile-content>
 <div class="govuk-form-group">
   <form
     *ngIf="jurisdictionPermissionsForm"
     [formGroup]="jurisdictionPermissionsForm"
   >
-    <div formArrayName="jurisdictions">
+    <lib-gov-checkbox
+      [group]="jurisdictionPermissionsForm"
+      [config]="{
+        value: 'enableCaseManagement',
+        label: 'Manage cases for your organisation',
+        name: 'enableCaseManagement',
+        hint: 'This provides the user with access to submat and manage claims.',
+        hiddenLabelContext:
+          'This provides the user with access to submat and manage claims '
+      }"
+    >
+    </lib-gov-checkbox>
+
+    <ng-container *ngIf="enableCaseManagement">
+      <app-solicitor-profile-content
+        *ngIf="hasSolicitorProfile"
+      ></app-solicitor-profile-content>
+      <!-- Display if OrganisationProfileId LIKE 'OGD_*' -->
+      <app-ogd-profile-content *ngIf="hasOgdProfile"></app-ogd-profile-content>
+    </ng-container>
+
+    <div formArrayName="jurisdictions" *ngIf="enableCaseManagement">
       <ng-container
         *ngFor="
           let jurisdiction of jurisdictionsFormArray.controls;
