--- a/src/users/components/search-filter-users/search-filter-users.component.html
+++ b/src/users/components/search-filter-users/search-filter-users.component.html
@@ -12,17 +12,19 @@
                               Enter at least 3 characters to begin filtering by name or email address
                         </div>
                         <input class="govuk-input" formControlName="nameFilter" [matAutocomplete]="autoComplete" (blur)="onBlur($event)" aria-label="Filter by name">
-                        <mat-autocomplete #autoComplete="matAutocomplete" [displayWith]="displayJudicialUser">
-                              <mat-option *ngFor="let judicialUser of filteredJudicialUsers$ | async" class="govuk-body"
-                                    [ngClass]="{'hide-autocomplete': !showAutocomplete}" [value]="judicialUser"
-                                    (onSelectionChange)="onSelectionChange($event)" id="{{judicialUser.email}}">
-                                    {{judicialUser?.firstName ? judicialUser.firstName : ''}} {{judicialUser?.lastName ?
-                                    judicialUser.lastName : ''}} {{judicialUser?.email ? ' (' + judicialUser.email + ')' : ''}}
-                              </mat-option>
-                              <mat-option *ngIf="noResults && searchTerm && searchTerm.length >= minSearchCharacters && showAutocomplete"
-                                    class="govuk-body" disabled>
-                                    No results found
-                              </mat-option>
+                        <mat-autocomplete #autoComplete="matAutocomplete" [displayWith]="displayJudicialUser" [hidden]="searchTerm.length < 3">
+                              <div [ngClass]="{'hide-autocomplete': !showAutocomplete}">
+                                    <mat-option *ngFor="let judicialUser of filteredJudicialUsers$ | async" class="govuk-body"
+                                          [value]="judicialUser"
+                                          (onSelectionChange)="onSelectionChange($event)" id="{{judicialUser.email}}">
+                                          {{judicialUser?.firstName ? judicialUser.firstName : ''}} {{judicialUser?.lastName ?
+                                          judicialUser.lastName : ''}} {{judicialUser?.email ? ' (' + judicialUser.email + ')' : ''}}
+                                    </mat-option>
+                                    <mat-option *ngIf="noResults && searchTerm && searchTerm.length >= minSearchCharacters && showAutocomplete"
+                                          class="govuk-body" disabled>
+                                          No results found
+                                    </mat-option>
+                              </div>
                         </mat-autocomplete>
                   </div>
 
