--- a/src/users/containers/manage-user/manage-user.component.html
+++ b/src/users/containers/manage-user/manage-user.component.html
@@ -5,7 +5,12 @@
 >
 </app-hmcts-main-wrapper>
 
-<!-- Display if OrganisationProfileId = 'SOLICITOR_PROFILE' -->
-<app-solicitor-profile-content></app-solicitor-profile-content>
-<!-- Display if OrganisationProfileId LIKE 'OGD_*' -->
-<app-ogd-profile-content></app-ogd-profile-content>
+<app-standard-user-permissions
+  [user]="this.user"
+  (selectedPermissionsChanged)="onStandardUserPermissionsChange($event)"
+></app-standard-user-permissions>
+<app-organisation-access-permissions
+  (selectedPermissionsChanged)="
+    onSelectedCaseManagamentPermissionsChange($event)
+  "
+></app-organisation-access-permissions>
