--- a/src/users/containers/manage-user/manage-user.component.html
+++ b/src/users/containers/manage-user/manage-user.component.html
@@ -5,6 +5,7 @@
 >
 </app-hmcts-main-wrapper>
 
+<app-user-personal-details></app-user-personal-details>
 <app-standard-user-permissions
   [user]="this.user"
   (selectedPermissionsChanged)="onStandardUserPermissionsChange($event)"
