Update searchFilter to use xui-common-lib select

--- a/src/users/components/search-filter-users/search-filter-users.component.html
+++ b/src/users/components/search-filter-users/search-filter-users.component.html
@@ -28,12 +28,12 @@
                         </mat-autocomplete>
                   </div>
 
-                  <lib-gov-select 
+                  <xuilib-gov-select 
                         [group]="searchFilterUserForm" 
                         [config]="statusFilterConfig.config" 
                         [items]="statusFilterConfig.items"
                   >
-                  </lib-gov-select>
+                  </xuilib-gov-select>
             </div>
       </div>
 </ng-container>
