Match pre-existing style

--- a/src/users/components/search-filter-users/search-filter-users.component.scss
+++ b/src/users/components/search-filter-users/search-filter-users.component.scss
@@ -8,6 +8,10 @@
     padding: 0;
 }
 
+::ng-deep .hmcts-pagination__link{
+    color: #1d70b8;
+}
+
 .mat-mdc-option {
     padding: 5px;
     margin: 0;
