--- a/src/users/components/organisation-access-permissions/organisation-access-permissions.component.html
+++ b/src/users/components/organisation-access-permissions/organisation-access-permissions.component.html
@@ -4,7 +4,7 @@
     *ngIf="jurisdictionPermissionsForm"
     [formGroup]="jurisdictionPermissionsForm"
   >
-    <lib-gov-checkbox
+    <xuilib-gov-checkbox
       [group]="jurisdictionPermissionsForm"
       [config]="{
         value: 'enableCaseManagement',
@@ -15,7 +15,7 @@
           'This provides the user with access to submat and manage claims '
       }"
     >
-    </lib-gov-checkbox>
+    </xuilib-gov-checkbox>
 
     <ng-container>
       <app-solicitor-profile-content
@@ -25,7 +25,11 @@
       <app-ogd-profile-content *ngIf="hasOgdProfile"></app-ogd-profile-content>
     </ng-container>
 
-    <div formArrayName="jurisdictions" *ngIf="enableCaseManagement" class="govuk-!-margin-left-4">
+    <div
+      formArrayName="jurisdictions"
+      *ngIf="enableCaseManagement"
+      class="govuk-!-margin-left-4"
+    >
       <ng-container
         *ngFor="
           let jurisdiction of jurisdictionsFormArray.controls;
