--- a/src/users/components/standard-user-permissions/standard-user-permissions.component.html
+++ b/src/users/components/standard-user-permissions/standard-user-permissions.component.html
@@ -1,7 +1,7 @@
 <h2 class="govuk-heading-l">Administrator access permissions</h2>
 <div class="govuk-form-group">
   <form *ngIf="permissionsForm" [formGroup]="permissionsForm">
-    <lib-gov-checkbox
+    <xuilib-gov-checkbox
       id="checkbox-grant-case-access-admin"
       *ngIf="grantCaseAccessAdmin$ | async"
       [group]="permissionsForm"
@@ -16,8 +16,8 @@
         hiddenLabelContext: 'Permit users to '
       }"
     >
-    </lib-gov-checkbox>
-    <lib-gov-checkbox
+    </xuilib-gov-checkbox>
+    <xuilib-gov-checkbox
       [group]="permissionsForm"
       [isChecked]="isPuiOrganisationManager"
       [config]="{
@@ -28,10 +28,10 @@
         hiddenLabelContext: 'Permit users to '
       }"
     >
-    </lib-gov-checkbox>
+    </xuilib-gov-checkbox>
 
     <div class="govuk-form-group">
-      <lib-gov-checkbox
+      <xuilib-gov-checkbox
         [group]="permissionsForm"
         [isChecked]="isPuiUserManager"
         [config]="{
@@ -42,9 +42,9 @@
           hiddenLabelContext: 'Permit users to '
         }"
       >
-      </lib-gov-checkbox>
+      </xuilib-gov-checkbox>
 
-      <lib-gov-checkbox
+      <xuilib-gov-checkbox
         id="checkbox-grant-finance-manager"
         *ngIf="grantFinanceManager$ | async"
         [group]="permissionsForm"
@@ -56,7 +56,7 @@
           hint: 'View payments, account balances, available credit and transactions.'
         }"
       >
-      </lib-gov-checkbox>
+      </xuilib-gov-checkbox>
     </div>
   </form>
 </div>
