--- a/src/users/components/organisation-access-permissions/organisation-access-permissions.component.html
+++ b/src/users/components/organisation-access-permissions/organisation-access-permissions.component.html
@@ -10,9 +10,9 @@
         value: 'enableCaseManagement',
         label: 'Manage cases for your organisation',
         name: 'enableCaseManagement',
-        hint: 'This provides the user with access to submat and manage claims.',
+        hint: 'This provides the user with access to submit and manage claims.',
         hiddenLabelContext:
-          'This provides the user with access to submat and manage claims '
+          'This provides the user with access to submit and manage claims'
       }"
     >
     </xuilib-gov-checkbox>
