Update search container styling

--- a/src/users/components/search-filter-users/search-filter-users.component.html
+++ b/src/users/components/search-filter-users/search-filter-users.component.html
@@ -1,6 +1,5 @@
 <ng-container [formGroup]="searchFilterUserForm">
-      <div class="govuk-grid-row">
-            <div class="govuk-grid-column-two-thirds">
+            <div class="govuk-grid-column-two-thirds govuk-!-padding-0">
                   
                   <div class="govuk-form-group">
                         <h1 class="govuk-label-wrapper">
@@ -35,5 +34,4 @@
                   >
                   </xuilib-gov-select>
             </div>
-      </div>
 </ng-container>
