--- a/src/users/containers/users/users.component.html
+++ b/src/users/containers/users/users.component.html
@@ -1,10 +1,10 @@
 <div class="hmcts-width-container">
   <main id="content" class="govuk-main-wrapper" role="main" tabindex="-1">
-     <div class="hmcts-page-heading">
-        <div class="hmcts-page-heading__title-wrapper">
+     <div class="hmcts-page-heading govuk-row">
+        <div class="hmcts-page-heading__title-wrapper govuk-grid-column-full govuk-!-padding-0">
            <h1 class="hmcts-page-heading__title govuk-heading-xl">Users</h1>
         </div>
-        <div class="hmcts-page-heading__actions-wrapper">
+        <div class="hmcts-page-heading__actions-wrapper govuk-grid-column-full govuk-!-padding-0">
            <a (click)="inviteNewUser()" role="button" draggable="false" class="govuk-button hmcts-page-heading__button" [class.invite-float-right]="searchFiltersEnabled$ | async">
            Invite user
            </a>
