enable debug setting for local dev

--- a/src/users/components/organisation-access-permissions/organisation-access-permissions.component.html
+++ b/src/users/components/organisation-access-permissions/organisation-access-permissions.component.html
@@ -18,11 +18,34 @@
     </xuilib-gov-checkbox>
 
     <ng-container>
-      <app-solicitor-profile-content
-        *ngIf="hasSolicitorProfile"
-      ></app-solicitor-profile-content>
-      <!-- Display if OrganisationProfileId LIKE 'OGD_*' -->
-      <app-ogd-profile-content *ngIf="hasOgdProfile"></app-ogd-profile-content>
+      <div id="supporting-content" class="govuk-!-margin-top-4 govuk-!-margin-left-8">
+        <app-solicitor-profile-content
+          *ngIf="hasSolicitorProfile"
+        ></app-solicitor-profile-content>
+
+        <app-ogd-cafcass-cy-profile-content
+          *ngIf="hasCafcassCyProfile"
+        ></app-ogd-cafcass-cy-profile-content>
+
+        <app-ogd-cafcass-en-profile-content
+          *ngIf="hasOgdCafcassEnglishProfile"
+        ></app-ogd-cafcass-en-profile-content>
+
+        <app-ogd-cica-profile-content *ngIf="hasOgdCicaProfile">
+        </app-ogd-cica-profile-content>
+
+        <app-ogd-dwp-profile-content
+          *ngIf="hasOgdDwpProfile"
+        ></app-ogd-dwp-profile-content>
+
+        <app-ogd-hmrc-profile-content
+          *ngIf="hasOgdHmrcProfile"
+        ></app-ogd-hmrc-profile-content>
+
+        <app-ogd-ho-profile-content
+          *ngIf="hasOgdHomeOfficeProfile"
+        ></app-ogd-ho-profile-content>
+      </div>
     </ng-container>
 
     <div
