update test setup

--- a/src/users/components/user-personal-details/user-personal-details.component.html
+++ b/src/users/components/user-personal-details/user-personal-details.component.html
@@ -74,21 +74,17 @@
 <ng-template #readOnlyTemplate>
   <div class="govuk-grid-column-full govuk-!-margin-bottom-4">
     <div class="govuk-grid-row">
-      <label class="govuk-label govuk-label--m" for="firstName"
-        ><span>First name</span></label
-      >
+      <label class="govuk-label govuk-label--m"><span>First name</span></label>
       <p id="firstName" class="govuk-body">{{ user.firstName }}</p>
     </div>
 
     <div class="govuk-grid-row">
-      <label class="govuk-label govuk-label--m" for="lastName"
-        ><span>Last name</span></label
-      >
+      <label class="govuk-label govuk-label--m"><span>Last name</span></label>
       <p id="lastName" class="govuk-body">{{ user.lastName }}</p>
     </div>
 
     <div class="govuk-grid-row">
-      <label class="govuk-label govuk-label--m" for="email"
+      <label class="govuk-label govuk-label--m"
         ><span>Email address</span></label
       >
       <p id="email" class="govuk-body">{{ user.email }}</p>
