--- a/src/users/containers/manage-user/manage-user.component.html
+++ b/src/users/containers/manage-user/manage-user.component.html
@@ -14,6 +14,7 @@
   <app-organisation-access-permissions
     [jurisdictions]="jurisdictions"
     [user]="user"
+    [organisationProfileIds]="organisationProfileIds"
     (selectedPermissionsChanged)="
       onSelectedCaseManagamentPermissionsChange($event)
     "
