invite user button redirect to new manage user component when ogd toggle is on

--- a/src/users/containers/manage-user/manage-user.component.html
+++ b/src/users/containers/manage-user/manage-user.component.html
@@ -19,4 +19,17 @@
       onSelectedCaseManagamentPermissionsChange($event)
     "
   ></app-organisation-access-permissions>
+
+  <div class="govuk-button-group">
+    <button
+      type="button"
+      data-prevent-double-click="true"
+      class="govuk-button"
+      data-module="govuk-button"
+      (click)="onSubmit()"
+    >
+      Submit
+    </button>
+    <a class="govuk-link" [routerLink]="backUrl">Cancel</a>
+  </div>
 </app-hmcts-main-wrapper>
